# ros_cart

./: .gitignore  README.md  firstdraft.data  frames_2025-07-22_15.00.33.gv
install/: local_setup.sh  setup.sh
install/mediapipe_cam/lib/mediapipe_cam/: phone_cam_node  pose_node
install/mediapipe_cam/share/mediapipe_cam/: package.bash  package.dsv  package.ps1  (+3 more)
log/: latest_build
map/: fifthdraft.data  fifthdraft.pgm  fifthdraft.yaml  fourthdraft.data  fourthdraft.pgm  fourthdraft.yaml  seconddraft.data  seconddraft.pgm  seconddraft.yaml  thirddraft.data  thirddraft.pgm  thirddraft.yaml
src/chassis/: package.xml  setup.py
src/chassis/config/: mapper_params_online_async.yaml  minimal_nav2.yaml  my_controllers.yaml  nav2_params.yaml  planner_params.yaml  twist_mux.yaml
src/chassis/description/: camera.xacro  chassis.urdf.xacro  chassis_core.xacro  gazebo_control.xacro  lidar.xacro  ros2_control.xacro
src/chassis/launch/: compute_path.launch.py  launch_robot.launch.py  launch_sim.launch.py  rplidar.launch.py  rsp.launch.py
src/diffdrive_arduino/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/diffdrive_arduino/diffdrive_arduino/: hardware_interface.py
src/diffdrive_arduino/include/diffdrive_arduino/: arduino_comms.hpp  diffbot_system.hpp  wheel.hpp
src/diffdrive_arduino/src/: diffbot_system.cpp
src/mediapipe_cam/: package.xml  setup.cfg  setup.py
src/mediapipe_cam/mediapipe_cam/: phone_cam_node.py
src/mediapipe_pose/: package.xml  setup.cfg  setup.py
src/mediapipe_pose/mediapipe_pose/: pose_node.py
src/mediapipe_pose_ros2/: package.xml  setup.cfg  setup.py
src/mediapipe_pose_ros2/mediapipe_pose_ros2/: pose_node.py
src/prediction/: package.xml  setup.py
src/prediction/prediction/: path_length.py  prediction_node.py
(+6 files in other folders)
